--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(genind2genalex)
 export(getfile)
 export(greycurve)
 export(ia)
+export(informloci)
 export(missingno)
 export(mlg)
 export(mlg.crosspop)
@@ -20,11 +21,24 @@ export(read.genalex)
 export(shufflepop)
 export(splitcombine)
 import(adegenet)
-importFrom(ape,boot.phylo)
-importFrom(ape,nj)
-importFrom(ape,nodelabels)
-importFrom(phangorn,upgma)
 import(ggplot2)
 import(pegas)
 import(vegan)
+importFrom(ape,axisPhylo)
+importFrom(ape,boot.phylo)
+importFrom(ape,ladderize)
+importFrom(ape,nj)
+importFrom(ape,nodelabels)
+importFrom(ape,plot.phylo)
+importFrom(ape,tiplabels)
+importFrom(igraph,"E<-")
+importFrom(igraph,"V<-")
+importFrom(igraph,E)
+importFrom(igraph,V)
+importFrom(igraph,graph.adjacency)
+importFrom(igraph,minimum.spanning.tree)
+importFrom(igraph,plot.igraph)
+importFrom(igraph,print.igraph)
+importFrom(phangorn,midpoint)
+importFrom(phangorn,upgma)
 useDynLib(poppr)
