--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,20 +2,21 @@ Package: poppr
 Type: Package
 Title: an R package for genetic analysis of populations with mixed
         reproduction
-Version: 1.0.5
-Date: 2013-12-12
+Version: 1.0.6
+Date: 2014-03-05
 Author: Zhian N. Kamvar <kamvarz@science.oregonstate.edu>, Javier F. Tabima
     <tabimaj@onid.orst.edu>, Niklaus J. Grunwald
     <grunwaln@science.oregonstate.edu>
 Maintainer: Zhian N. Kamvar <kamvarz@science.oregonstate.edu>
+Encoding: UTF-8
 URL: http://cran.r-project.org/package=poppr,
         http://grunwaldlab.cgrb.oregonstate.edu/poppr-r-package-population-genetics
 Description: Population genetic analyses for hierarchical analysis of partially
     clonal populations built upon the architecture of the adegenet package.
-Depends: R (>= 2.15.1), adegenet, pegas
-Imports: vegan, ggplot2, phangorn, ape, igraph, methods
+Depends: R (>= 2.15.1), adegenet
+Imports: vegan, ggplot2, phangorn, ape, igraph, pegas, methods
 License: GPL-2
-Packaged: 2013-12-12 22:39:27 UTC; zhian
+Packaged: 2014-03-05 16:19:17 UTC; zhian
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-12-13 00:33:02
+Date/Publication: 2014-03-05 18:11:49
